--- a/src/components/readOnlyInput/readOnlyInput.module.css
+++ b/src/components/readOnlyInput/readOnlyInput.module.css
@@ -3,6 +3,7 @@
   margin-top: 45px;
   margin-right: 15px;
   margin-left: 15px;
+  background-color: #ffffff;
 }
 .border {
   border: solid 1px lightgray;
